# SAUDE-APP

./: .gitignore  .replit  ADMIN_GUIDE.md  CREATE_SUPERUSER.md  SECURITY_FEATURES.md  manage.py  pyproject.toml  replit.md  requirements.txt
.local/state/replit/agent/: progress_tracker.md
auth_system/: __init__.py  admin.py  admin_config.py  decorators.py  forms.py  middleware.py  models.py  views.py
auth_system/migrations/: 0001_initial.py  0002_userprofile_failed_login_attempts_and_more.py
clientes/: admin.py  forms.py  models.py  urls.py  views.py
clientes/migrations/: 0001_initial.py  0002_remove_cliente_nif_remove_cliente_tipo_cliente_and_more.py
energia_gestao/: asgi.py  settings.py  urls.py  views.py  wsgi.py
equipamentos/: admin.py  models.py
equipamentos/migrations/: 0001_initial.py
pagamentos/: admin.py  models.py
pagamentos/migrations/: 0001_initial.py
relatorios/: admin.py  models.py
relatorios/migrations/: 0001_initial.py
templates/: base.html  dashboard.html  home.html
templates/admin/: base_site.html
templates/auth/: login.html
templates/clientes/: contrato_form.html  contratos_list.html  paciente_confirm_delete.html  paciente_detail.html  paciente_form.html  paciente_list.html  pacientes_list.html
templates/includes/: alerts.html
templates/usuarios/: usuario_list.html
